tests/machine/x/c/right_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/right_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/right_join.c:91:52: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   91 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |                                                    ^
/workspace/mochi/tests/machine/x/c/right_join.c:91:52: note: (near initialization for ‘(anonymous).customerName’)
/workspace/mochi/tests/machine/x/c/right_join.c:91:69: error: incompatible types when initializing type ‘int’ using type ‘ordersItem’
   91 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |                                                                     ^
/workspace/mochi/tests/machine/x/c/right_join.c:95:25: error: invalid initializer
   95 |       customersItem c = 0;
      |                         ^
/workspace/mochi/tests/machine/x/c/right_join.c:96:52: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   96 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |                                                    ^
/workspace/mochi/tests/machine/x/c/right_join.c:96:52: note: (near initialization for ‘(anonymous).customerName’)
/workspace/mochi/tests/machine/x/c/right_join.c:96:69: error: incompatible types when initializing type ‘int’ using type ‘ordersItem’
   96 |       _t3.data[_t4] = (resultItem){.customerName = c.name, .order = o};
      |                                                                     ^
/workspace/mochi/tests/machine/x/c/right_join.c:101:28: error: invalid initializer
  101 |   list_resultItem result = _t3;
      |                            ^~~
/workspace/mochi/tests/machine/x/c/right_join.c:109:32: error: request for member ‘id’ in something not a structure or union
  109 |       printf("%d ", entry.order.id);
      |                                ^
/workspace/mochi/tests/machine/x/c/right_join.c:111:33: error: request for member ‘total’ in something not a structure or union
  111 |       printf("%d\n", entry.order.total);
      |                                 ^

   1: #include <stdio.h>
